# ibdp_classes

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.py
examples/: 2d_array.pseudocode  array.pseudocode  collection.pseudo  extra_functionality.py  input.pseudocode  queue.pseudocode  recursive.pseudocode  stack.pseudocode
examples/bespoke/: imports.pseudo  imports.py
examples/extensions/: binary.pseudo  fractal.pseudo  sine.pseudo
ibdp_classes/: __init__.py  __main__.py  ibdp_classes.py
src/extensions/: bits_defs.py  math_defs.py  strings_defs.py  turtle_defs.py
src/ibdp_classes/: __init__.py  __main__.py  ibdp_classes.py
